--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: NG Ki Kan
+description: This is my personal blog for COMP4461 at HKUST
+show_buttons: false
 google_analytics:
 theme: jekyll-theme-cayman
